CPS-130: Fix spacing of case details field on Cases tab of contact page

--- a/scss/components/_contact-cases-tab.scss
+++ b/scss/components/_contact-cases-tab.scss
@@ -79,6 +79,10 @@
     margin-top: 5px;
   }
 
+  .civicase__summary-tab__description {
+    margin-bottom: 5px;
+  }
+
   .civicase__contact-card--client,
   .civicase__contact-card--manager {
     .material-icons {
